gcc/tree-diagnostic.h
@@ -54,4 +54,7 @@ void virt_loc_aware_diagnostic_finalizer (diagnostic_context *,
 					  diagnostic_info *);
 
 void tree_diagnostics_defaults (diagnostic_context *context);
+bool default_tree_printer (pretty_printer *, text_info *, const char *,
+			   int, bool, bool, bool);
+
 #endif /* ! GCC_TREE_DIAGNOSTIC_H */
